# soundmind

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml
.agents/skills/memory-layer/: SKILL.md
.agents/skills/memory-layer/agents/: openai.yaml
.agents/skills/memory-layer/references/: architecture.md  curation-rules.md  query-contract.md
.agents/skills/memory-layer/scripts/: capture-task.sh  curate-memory.sh  query-memory.sh  remember-current-work.sh  resolve-memctl.sh
crates/app_backend/: Cargo.toml
crates/app_backend/src/: assistant.rs  http_api.rs  main.rs  runtime.rs
crates/app_core/: Cargo.toml
crates/app_core/src/: lib.rs
crates/app_ui/: Cargo.toml  tauri.conf.json
crates/app_ui/frontend/: app.js  index.html  main.js  styles.css
crates/app_ui/frontend/components/: assistant.js  history.js  settings.js  status.js  transcript.js
crates/app_ui/frontend/lib/: api.js  app_state.js  dom.js  ui.js  utils.js
crates/app_ui/src/: main.rs
crates/audio_capture/: Cargo.toml
crates/audio_capture/src/: core.rs  lib.rs  linux_pulse.rs  mock.rs
crates/audio_pipeline/: Cargo.toml
crates/audio_pipeline/src/: lib.rs
crates/context_engine/: Cargo.toml
crates/context_engine/src/: lib.rs
crates/ipc_schema/: Cargo.toml
crates/ipc_schema/src/: lib.rs
crates/llm_core/: Cargo.toml
crates/llm_core/src/: lib.rs
crates/llm_ollama/: Cargo.toml
crates/llm_ollama/src/: lib.rs
crates/llm_openai/: Cargo.toml
crates/llm_openai/src/: lib.rs
crates/policy_engine/: Cargo.toml
crates/policy_engine/src/: lib.rs
crates/storage_sqlite/: Cargo.toml
crates/storage_sqlite/migrations/: 20260320120000_init.sql  20260322100000_add_priming_documents.sql  20260325143000_add_assistant_reuse_fields.sql
crates/storage_sqlite/src/: lib.rs
crates/stt_core/: Cargo.toml
crates/stt_core/src/: lib.rs
crates/stt_scribe/: Cargo.toml
crates/stt_scribe/src/: lib.rs
crates/transcript_core/: Cargo.toml
crates/transcript_core/src/: lib.rs
docs/: DEVELOPMENT.md  INSTALLATION.md  USER_GUIDE.md  architecture.md  tasks.md
docs/future-development/: meeting-export-structure-spec.md
packaging/linux/: soundmind.desktop.in
packaging/systemd/: soundmind-backend.service
scripts/: install-user-service.sh  package-release.sh  release-github.sh
testdata/: synthetic-interview-questions-2.md  synthetic-interview-questions.md
