[workspace]
members = [
  "crates/app_core",
  "crates/app_backend",
  "crates/app_ui",
  "crates/audio_capture",
  "crates/audio_pipeline",
  "crates/context_engine",
  "crates/ipc_schema",
  "crates/llm_core",
  "crates/llm_ollama",
  "crates/llm_openai",
  "crates/policy_engine",
  "crates/storage_sqlite",
  "crates/stt_core",
  "crates/stt_scribe",
  "crates/transcript_core",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["Codex"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
dirs = "6.0"
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["chrono", "migrate", "runtime-tokio-rustls", "sqlite", "uuid"] }
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-build = "2.5.6"
tauri-plugin-global-shortcut = "2.3.1"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
