[package]
name = "app_backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
audio_capture = { path = "../audio_capture" }
audio_pipeline = { path = "../audio_pipeline" }
axum.workspace = true
chrono.workspace = true
context_engine = { path = "../context_engine" }
dirs.workspace = true
ipc_schema = { path = "../ipc_schema" }
llm_openai = { path = "../llm_openai" }
policy_engine = { path = "../policy_engine" }
serde.workspace = true
serde_json.workspace = true
storage_sqlite = { path = "../storage_sqlite" }
stt_scribe = { path = "../stt_scribe" }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transcript_core = { path = "../transcript_core" }
uuid.workspace = true
