[package]
name = "app_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs.workspace = true
dotenvy.workspace = true
ipc_schema = { path = "../ipc_schema" }
serde.workspace = true
serde_json.workspace = true
storage_sqlite = { path = "../storage_sqlite" }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
