[package]
name = "app_ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
ipc_schema = { path = "../ipc_schema" }
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
