[package]
name = "app_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"
default-run = "app_ui"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
ipc_schema = { path = "../ipc_schema" }
reqwest.workspace = true
serde.workspace = true
tauri.workspace = true
tauri-plugin-global-shortcut.workspace = true
tokio.workspace = true

[build-dependencies]
tauri-build.workspace = true
